@@ -440,18 +440,17 @@ namespace MonoDevelop.DesignerSupport.PropertyGrid
 	
 	class CellRendererProperty: CellRenderer
 	{
+		TreeView tree;
 		PropertyDescriptor property;
 		object instance;
 		int rowHeight;
-		Gdk.Color darkColor;
 		PropertyEditorCell editorCell;
 		bool sensitive = true;
 		bool visible = true;
 		
 		public CellRendererProperty (TreeView tree)
 		{
-			darkColor = tree.Style.Backgrounds [(int) Gtk.StateType.Normal];
-			
+			this.tree = tree;
 			Xalign = 0;
 			Xpad = 3;
 			
@@ -466,7 +465,7 @@ namespace MonoDevelop.DesignerSupport.PropertyGrid
 			this.instance = instance;
 			this.property = property;
 			if (property == null) {
-				this.CellBackgroundGdk = darkColor;
+				this.CellBackgroundGdk = tree.Style.MidColors [(int) Gtk.StateType.Normal];
 				sensitive = true;
 			}
 			else {
@@ -552,9 +551,9 @@ namespace MonoDevelop.DesignerSupport.PropertyGrid
 
 	class CellRendererPropertyGroup: CellRendererText
 	{
+		TreeView tree;
 		Pango.Layout layout;
 		bool isGroup;
-		Gdk.Color darkColor;
 		bool sensitive = true;
 		
 		public bool IsGroup {
@@ -562,7 +561,7 @@ namespace MonoDevelop.DesignerSupport.PropertyGrid
 			set { 
 				isGroup = value;
 				if (value)
-					this.CellBackgroundGdk = darkColor;
+					this.CellBackgroundGdk = tree.Style.MidColors [(int) Gtk.StateType.Normal];
 				else
 					this.CellBackground = null;
 			}
@@ -575,9 +574,9 @@ namespace MonoDevelop.DesignerSupport.PropertyGrid
 		
 		public CellRendererPropertyGroup (TreeView tree)
 		{
+			this.tree = tree;
 			layout = new Pango.Layout (tree.PangoContext);
 			layout.Wrap = Pango.WrapMode.Char;
-			darkColor = tree.Style.Backgrounds [(int) Gtk.StateType.Normal];
 			
 			Pango.FontDescription des = tree.Style.FontDescription.Copy();
 			layout.FontDescription = des;
@@ -630,7 +629,7 @@ namespace MonoDevelop.DesignerSupport.PropertyGrid
 				window.DrawLayout (widget.Style.TextGC (state), x, y, layout);
 				int bx = background_area.X + background_area.Width - 1;
 				Gdk.GC gc = new Gdk.GC (window);
-		   		gc.RgbFgColor = darkColor;
+		   		gc.RgbFgColor = tree.Style.MidColors [(int) Gtk.StateType.Normal];
 				window.DrawLine (gc, bx, background_area.Y, bx, background_area.Y + background_area.Height);
 			}
 		}
